force-app/main/default/objects/Cash_Book_Line_Item__c/Cash_Book_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Cash Book Line Item</label>
    <nameField>
        <label>Cash Book Line item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Book Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>