force-app/main/default/objects/Cash_Book_Line_Item__c/fields/Cash_Book__c.field-meta.xml
<CustomField>
    <fullName>Cash_Book__c</fullName>
    <label>Cash Book</label>
    <referenceTo>Cash_Book__c</referenceTo>
    <relationshipLabel>Cash Book Line Items</relationshipLabel>
    <relationshipName>Cash_Book_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>