force-app/main/default/objects/Cash_Book_Line_Item__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>