force-app/main/default/objects/Cash_Book_Line_Item__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash In</fullName>
            </value>
            <value>
                <fullName>Cash Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>